--- a/FinPlan.Web/Pages/Retire/Retire.razor
+++ b/FinPlan.Web/Pages/Retire/Retire.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using System.Text.Json
 @using System.Text
+@using Microsoft.JSInterop
 
 @inject IJSRuntime JSRuntime
 @inject NavigationManager Navigation
