--- a/FinPlan.Web/Pages/Retire/Retire.razor
+++ b/FinPlan.Web/Pages/Retire/Retire.razor
@@ -3,7 +3,7 @@
 @using System.Collections.Generic
 @using FinPlan.Web.Components
 @using FinPlan.Shared.Models.Spending
-@using FinPlan.Web.Components.Shared
+@using FinPlan.Web.Pages.Retire.Components
 @using Microsoft.AspNetCore.Components.Web
 @using System.Text.Json
 @using System.Text
@@ -12,7 +12,7 @@
 @inject IJSRuntime JSRuntime
 @inject NavigationManager Navigation
 
-@namespace FinPlan.Web.Components.Pages
+@namespace FinPlan.Web.Pages.Retire
 
 <PageTitle>Retirement Income Planner</PageTitle>
 
