--- a/FinPlan.Web/Pages/Retire/Retire.razor
+++ b/FinPlan.Web/Pages/Retire/Retire.razor
@@ -956,7 +956,7 @@
 
 
                         <!-- Complete State - Normal View -->
-                        <PlanSectionsPanel Model="@Model" YearRows="@YearRows" IsSimpleMode="isSimpleMode" OnOpenWizard="HandlePanelOpenWizard" />
+                        <RetirePlanSectionsPanel Model="@Model" YearRows="@YearRows" IsSimpleMode="isSimpleMode" OnOpenWizard="HandlePanelOpenWizard" />
                     </div>
 
                     <!-- Right column (2) -->
